--- a/templates/menu_page.html
+++ b/templates/menu_page.html
@@ -29,7 +29,7 @@
 
 
         <div class="search-container">
-            <input type="text" id="search-input" placeholder="Your Perfect Match">
+            <input type="text" id="search-input" placeholder="What do your tastebuds await? :P">
             <div id="search-results"></div>
           </div>
 
@@ -242,7 +242,7 @@
                 </a>
             </div>
         </div>
-
+        <div id = "output"></div>
         <p id = "storage">Hello</p>
         <div class="cart">
             <h2>Your Order:</h2>
@@ -261,7 +261,7 @@
                 <div class="cart-buttons">
                     <input class="checkout-btn" type = "submit">Checkout</button>
                 </div>
-                <div id = "output"></div>
+                
             </form>
         </div>
     <div class="footer">
