--- a/static/pickuppage.css
+++ b/static/pickuppage.css
@@ -58,7 +58,7 @@ nav a{
 	padding-left: 1%;
 	padding-right: 2%;
 	padding-bottom: 0px;
-	font-size: 150%;
+	font-size: 1.5vw;
 	text-transform: uppercase;
 	font-family: 'Patua One', cursive;
 	margin-top: 1%;
@@ -124,7 +124,7 @@ table{
 	font-size: 2vw;
 	border: 1px solid black;
 	text-align: center;
-	margin-left: 15%;
+	align-self: center;
 	text-transform: capitalize;
 }
 
