--- a/static/menu_page.css
+++ b/static/menu_page.css
@@ -182,11 +182,11 @@ margin-bottom: 25%;
   }
   
   .tiles-container {
-    width: 100%;
+    width: 80%;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    margin-left: 1%;
+    margin-left: 0%;
   }
   
   .tile {
@@ -326,7 +326,7 @@ counter button starts
 
 .cart-item {
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #ddd;
   
