--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -27,9 +27,12 @@
 			<p id = "or">or <span class = "red"><a href = "pickup">pick-up an order</a></p>
 		</div>
 
-		<div id = "container2">
-
-		</div>
+		<div id="container2">
+			<img id="side_image_bottom">
+			<div class="circle circle-left">Right Circle</div>
+			<div class="circle circle-right">Left Circle</div>
+		  </div>
+		  
 		<script src = "../static/all.js"></script>
 	
 		<div class="footer">
