--- a/templates/pickuppage.html
+++ b/templates/pickuppage.html
@@ -26,7 +26,7 @@
     </div>
     
     <div id = "container">
-        <table>
+        <table id = "tabli">
             <tr>
                 <th>Item Id</th>
                 <th>Name of Item</th>
@@ -38,7 +38,7 @@
                 <th>Order</th>
             </th>
             {% for item in items %}
-                <tr>
+                <tr id = "{{ item[0] }}">
                     <td>{{ item[0] }}</td> 
                     <td>{{ item[1] }}</td> 
                     <td>{{ item[2] }}</td> 
@@ -46,7 +46,7 @@
                     <td>{{ item[4] }}</td>
                     <td>{{ item[5] }}</td>
                     <td>{{ item[6] }}</td>
-                    <td><button class = "remove" name = "Remove">Accept</button></td>
+                    <td><button class = "remove" name = "Remove" id = "">Accept</button></td>
                 </tr> 
             {% endfor %}
         </table>
