--- a/templates/pickuppage.html
+++ b/templates/pickuppage.html
@@ -38,7 +38,7 @@
                 <th>Order</th>
             </th>
             {% for item in items %}
-                <tr id = "{{ item[0] }}">
+                <tr id = "{{ items[0] }}">
                     <td>{{ item[0] }}</td> 
                     <td>{{ item[1] }}</td> 
                     <td>{{ item[2] }}</td> 
@@ -46,7 +46,7 @@
                     <td>{{ item[4] }}</td>
                     <td>{{ item[5] }}</td>
                     <td>{{ item[6] }}</td>
-                    <td><button class = "remove" name = "Remove" id = "">Accept</button></td>
+                    <td><button class = "remove" name = "Remove" id = "{{ item[0] }}" onclick = "remove(`{{ item[0] }}`)">Accept</button></td>
                 </tr> 
             {% endfor %}
         </table>
