--- a/templates/menu_page.html
+++ b/templates/menu_page.html
@@ -140,7 +140,7 @@
         <div class = "tiles-container">
             <div class = "menu">
                 {% for item in items %}
-                <a href = "#" class = "tile"">
+                <a href = "#" class = "tile">
                     <h3>{{item[0]}}</h3>
                     <h2>{{item[2]}}</h2>
                     <p>{{item[4]}}</p>
