--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -29,8 +29,10 @@
 
 		<div id="container2">
 			<img id="side_image_bottom">
-			<div class="circle circle-left">Right Circle</div>
-			<div class="circle circle-right">Left Circle</div>
+			<div class="circle circle-left">50</div>
+			<!-- <p>Expected Number of People</p> -->
+			<div class="circle circle-right">{{ length }}</div>
+			<!-- <p>Current Number of Orders</p> -->
 		  </div>
 		  
 		<script src = "../static/all.js"></script>
