--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -28,12 +28,16 @@
 		</div>
 
 		<div id="container2">
-			<img id="side_image_bottom">
-			<div class="circle circle-left">50</div>
-			<!-- <p>Expected Number of People</p> -->
-			<div class="circle circle-right">{{ length }}</div>
-			<!-- <p>Current Number of Orders</p> -->
+			<div class="circle circle-left">
+			  <h6>Number Of Orders  <br>  placed</h6>
+			  <p>50</p>
+			</div>
+			<div class="circle circle-right">
+			  <h6>Number Of Expected <br>people available for delivery</h6>
+			  <p>{{ length }}</p>
+			</div>
 		  </div>
+		  
 		  
 		<script src = "../static/all.js"></script>
 	
