--- a/static/pickuppage.css
+++ b/static/pickuppage.css
@@ -143,6 +143,7 @@ table th{
 table td{
 	border-top: 1px solid black;
 	border-right: 1px solid black;
+	color: white;
 	font-family: 'Secular One', sans-serif;
 }
 
@@ -153,6 +154,7 @@ table td{
 #statistics_container{
 	height: 100vh;
 	width: 30%;
+	margin-right: 0;
 	border-right: 1px solid black;
 	overflow: scroll;
 	background-color: #266200;
@@ -179,4 +181,55 @@ table td{
 	margin-left: 2vh;
 	text-transform: uppercase;
 	font-family: 'Changa One', cursive;
+}
+
+#widget_holder{
+	margin-top: 5%;
+	margin-left: 0;
+	float: right;
+	margin-right: 35vw;
+	/* overflow-y: scroll; */
+}
+
+.widget{
+	background-color: white;
+	border-radius: 50px;
+	width: 180%;
+	margin-top: 2vh;
+	padding-left: 2vw;
+	padding-right: 3vw;
+	padding-top: 2vw;
+	padding-bottom: 2vw;
+	text-transform: uppercase;
+	font-family: 'Changa One', cursive;
+}
+
+.widget h1{
+	font-size: 3vw;
+}
+
+.widget h2{
+	font-size: 1.8vw;
+}
+
+.widget p{
+	font-size: 1.5vw;
+}
+
+.widget h3{
+	font-size: 1.1vw;
+	font-family: 'Secular One', sans-serif;
+}
+
+#widget_holder button{
+	background-color: greenyellow;
+	font-size: 3vw;
+	font-family: 'Changa One', cursive;
+	/* margin-left: 75%; */
+	border-radius: 40% 10% 5% 40%;
+	padding-left: 2%;
+	padding-right: 2%;
+	padding-top: 2%;
+	padding-bottom: 2%;
+	float: right;
 }
