--- a/templates/pickuppage.html
+++ b/templates/pickuppage.html
@@ -25,7 +25,7 @@
         <p>{{description}}</p>
     </div>
     
-    <div id = "container">
+    <!-- <div id = "container">
         <table id = "tabli">
             <tr>
                 <th>Item Id</th>
@@ -49,7 +49,18 @@
                     <td><button class = "remove" name = "Remove" id = "{{ item[0] }}" onclick = "remove(`{{ item[0] }}`)">Accept</button></td>
                 </tr> 
             {% endfor %}
-        </table>
+        </table> -->
+        <!-- #id, name of item, price, qunatity, name of orderer, location of orderer, batch of orderer, phone -->
+    <div id = "widget_holder">
+        {% for item in items %}
+        <div class = "widget">
+            <button class = "remove" name = "Remove" id = "{{ item[0] }}" onclick = "remove(`{{ item[0] }}`)">Accept</button>
+            <p>{{ item[0] }}</p><h1>{{ item[1] }}
+            <h2>Price: {{ item[2] }} | Quantity: {{ item[3] }}</h2></h1>
+            <h3>Details-> Name: {{ item[5] }} | Batch: {{ item[6] }} | Phone: {{ item[7] }}</h3>
+        </div>
+                
+        {% endfor %}
     </div>
     <div id = "statistics_container">
         <h1 id = "space_maker"></h1>
