--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -21,7 +21,7 @@
 		<div id = "container1">
 			<img id = "side_image">
 			<h1>Eat Whatever <br>Whenever <br> And <br> Earn Money</h1>
-			<p id = "main_container_info">Introducing to you the one of its kind food ordering system that helps you save time and makes you get the food at your doorstep.</p>
+			<p id = "main_container_info">Introducing to you the one of its kind food ordering system that helps you save time and makes you get the food at your doorstep. <span class = "colorspan2">HUNGZY@IIIT</span></p>
 
 			<a href = "menupage" id = "place_order"><p><img class = "arrow_forward">Place Order </p></a>
 			<p id = "or">or <span class = "red"><a href = "pickup">pick-up an order</a></p>
