--- a/templates/menu_page.html
+++ b/templates/menu_page.html
@@ -276,7 +276,8 @@
                 <!-- <p class="empty-cart">Your Cart</p> -->
                 </div>
                 <div class="cart-buttons">
-                    <input class="checkout-btn" type = "submit">Checkout</button>
+                    <label for = "submit"></label>
+                    <button class="checkout-btn" type = "submit" id = "submit">Checkout</button>
                 </div>
                 
             </form>
