--- a/static/pickuppage.css
+++ b/static/pickuppage.css
@@ -81,7 +81,7 @@ nav a{
 #container{
 	height: 100vh;
 	margin-top: 7%;
-	margin-bottom: 25%;
+	margin-bottom: 55%;
 	float: right;
 }
    
@@ -89,11 +89,18 @@ nav a{
 .footer {
     margin-top: 7%;
     /* position: fixed; */
-    left: 0;
-    bottom: 0;
+    /* left: 0; */
+    /* bottom: 0; */
     width: 100%;
     background-color: #ffffff;
     color: black;
+	bottom: 0px;
+	left: 0px;
+	/* right: 0px; */
+	overflow: hidden;
+	margin: 0 0 0 0;
+	height: 20vh;
+	/* position: relative; */
 }
   
 
@@ -101,9 +108,9 @@ nav a{
 	font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 100%; /* Set the font size to 1.2 rem */
     text-align: center;
-	/* margin-top: 5%; */
+	margin-top: 5%;
 	margin-top: 1%;
-	margin-bottom: 0;
+	margin-bottom: 0px;
 	line-height: 10px;
     
 }
@@ -187,14 +194,14 @@ table td{
 	margin-top: 5%;
 	margin-left: 0;
 	float: right;
-	margin-right: 35vw;
+	margin-right: 10vw;
 	/* overflow-y: scroll; */
 }
 
 .widget{
 	background-color: white;
 	border-radius: 50px;
-	width: 180%;
+	width: 100%;
 	margin-top: 2vh;
 	padding-left: 2vw;
 	padding-right: 3vw;
@@ -202,6 +209,7 @@ table td{
 	padding-bottom: 2vw;
 	text-transform: uppercase;
 	font-family: 'Changa One', cursive;
+	line-height: 4px;
 }
 
 .widget h1{
@@ -232,4 +240,14 @@ table td{
 	padding-top: 2%;
 	padding-bottom: 2%;
 	float: right;
+}
+
+#space_maker{
+	margin-top: 20%;
+	margin-bottom: 0;
+	margin-left: 5%;
+	color: white;
+	font-size: 3vw;
+	font-family: 'Changa One', cursive;
+	line-height: 2px;
 }
